--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="css/custom.css"> <!-- Resource style -->
+	<!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/kybarg/mdl-selectfield/mdl-menu-implementation/mdl-selectfield.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+	<link rel="stylesheet" href="css/custom.css">
   	
 </head>
 <body>
@@ -21,7 +31,10 @@
 				<h2 class="header-top--title">Événements</h2>
 			</div>
 
-			<button class="back-button">Retour au site du Temps</button>
+			<!-- Accent-colored raised button with ripple -->
+			<button class="back-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+				Retour au site du Temps
+			</button>
 			
 		</div>
 		<!-- <h1>Content Filters</h1> -->
@@ -33,8 +46,16 @@
 		<div class="hello-form">
 			<h2 class="hello-form--punchline">Trouvez votre prochain rendez-vous</h2>
 			<div class="hello-form--filters-wrapper">
-				<div class="hello-form--filters-wrapper--box cd-filter-block">
-					<div class="cd-filter-content">
+				<div class="hello-form--filters-wrapper--box ">
+					<div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+						<select class="mdl-selectfield__select" id="place" name="place">
+							<option value=""></option>
+							<option value="option1">Lausanne</option>
+							<option value="option1">Genève</option>
+						</select>
+						<label class="mdl-selectfield__label" for="place">Lieu</label>
+					</div>
+					<!-- <div class="cd-filter-content">
 						<div class="cd-select cd-filters">
 							<select class="filter" name="selectThis" id="selectThis">
 								<option value="">Lieu</option>
@@ -42,37 +63,37 @@
 								<option value=".geneve">Genève</option>
 							</select>
 						</div>
-					</div>
+					</div> -->
 				<!-- cd-filter-content -->
 				</div>
-				<div class="hello-form--filters-wrapper--box cd-filter-block">
-					<div class="cd-filter-content">
-						<div class="cd-select cd-filters">
-							<select class="filter" name="selectThis" id="selectThis">
-								<option value="">Catégorie</option>
-								<option value=".banane">Banane</option>
-								<option value=".ananas">Ananas</option>
-							</select>
-						</div>
+				<div class="hello-form--filters-wrapper--box">
+					<div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+						<select class="mdl-selectfield__select" id="category" name="category">
+							<option value=""></option>
+							<option value="option1">Pomme</option>
+							<option value="option2">Poire</option>
+							<option value="option3">Banane</option>
+							<option value="option4">Navitogorsk</option>
+						</select>
+						<label class="mdl-selectfield__label" for="category">Catégorie</label>
 					</div>
 					<!-- cd-filter-content -->
 				</div>
-				<div class="hello-form--filters-wrapper--box cd-filter-block">
-					<div class="cd-filter-content">
-						<div class="cd-select cd-filters">
-							<select class="filter" name="selectThis" id="selectThis">
-								<option value="">Souscription</option>
-								<option value=".notpremium">Toutes</option>
-								<option value=".premium">Premium seulement</option>
-							</select>
-						</div>
+				<div class="hello-form--filters-wrapper--box ">
+					<div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+						<select class="mdl-selectfield__select" id="subtype" name="subtype">
+							<option value=""></option>
+							<option value="option1">Normal</option>
+							<option value="option2">Premium</option>
+						</select>
+						<label class="mdl-selectfield__label" for="subtype">Souscription</label>
 					</div>
 					<!-- cd-filter-content -->
 				</div>
 			</div>
 		</div>
 
-		<!-- <div class="cd-tab-filter-wrapper">
+		<div class="cd-tab-filter-wrapper desktop-hidden">
 			<div class="cd-tab-filter">
 				<ul class="cd-filters">
 					<li class="placeholder"> 
@@ -83,24 +104,32 @@
 					<li class="filter" data-filter=".lieu-geneve"><a href="#0" data-type="lieu-geneve">Genève</a></li>
 				</ul> 
 			</div> 
-		</div>  -->
+		</div> 
 
 		
 
 		<section class="cd-gallery">
 			<ul>
-				<li class="mix lieu-lausanne check1 radio2 option3 banane"><img src="img/img-1.jpg" alt="Image 1"></li>
-				<li class="mix lieu-geneve check2 radio2 geneve ananas"><img src="img/img-2.jpg" alt="Image 2"></li>
-				<li class="mix lieu-lausanne check3 radio3 lausanne"><img src="img/img-3.jpg" alt="Image 3"></li>
-				<li class="mix lieu-lausanne check3 radio2 option4"><img src="img/img-4.jpg" alt="Image 4"></li>
-				<li class="mix lieu-lausanne check1 radio3 geneve"><img src="img/img-5.jpg" alt="Image 5"></li>
-				<li class="mix lieu-geneve check2 radio3 option3"><img src="img/img-6.jpg" alt="Image 6"></li>
-				<li class="mix lieu-geneve check2 radio2 lausanne"><img src="img/img-7.jpg" alt="Image 7"></li>
-				<li class="mix lieu-lausanne check1 radio3 option4"><img src="img/img-8.jpg" alt="Image 8"></li>
-				<li class="mix lieu-geneve check1 radio2 option3"><img src="img/img-9.jpg" alt="Image 9"></li>
-				<li class="mix lieu-lausanne check3 radio2 option4"><img src="img/img-10.jpg" alt="Image 10"></li>
-				<li class="mix lieu-lausanne check3 radio3 geneve"><img src="img/img-11.jpg" alt="Image 11"></li>
-				<li class="mix lieu-geneve check1 radio3 lausanne"><img src="img/img-12.jpg" alt="Image 12"></li>
+				<li class="card mix lieu-lausanne check1 radio2 option3 banane">
+					<div class="card-header" style="background: url('img/berthollet.jpg;')"></div>
+					<div class="card-excerpt">
+						<span class="date">13 février 1984</span>
+						<h1>Concert des soeurs Berthollet à la rédaction du Temps à Lausanne</h1>
+						<span class="lieu">Rédaction du Temps, Lausanne</span>
+					</div>
+					
+				</li>
+				<li class="card mix lieu-geneve check2 radio2 geneve ananas"><img src="img/img-2.jpg" alt="Image 2"></li>
+				<li class="card mix lieu-lausanne check3 radio3 lausanne"><img src="img/img-3.jpg" alt="Image 3"></li>
+				<li class="card mix lieu-lausanne check3 radio2 option4"><img src="img/img-4.jpg" alt="Image 4"></li>
+				<li class="card mix lieu-lausanne check1 radio3 geneve"><img src="img/img-5.jpg" alt="Image 5"></li>
+				<li class="card mix lieu-geneve check2 radio3 option3"><img src="img/img-6.jpg" alt="Image 6"></li>
+				<li class="card mix lieu-geneve check2 radio2 lausanne"><img src="img/img-7.jpg" alt="Image 7"></li>
+				<li class="card mix lieu-lausanne check1 radio3 option4"><img src="img/img-8.jpg" alt="Image 8"></li>
+				<li class="card mix lieu-geneve check1 radio2 option3"><img src="img/img-9.jpg" alt="Image 9"></li>
+				<li class="card mix lieu-lausanne check3 radio2 option4"><img src="img/img-10.jpg" alt="Image 10"></li>
+				<li class="card mix lieu-lausanne check3 radio3 geneve"><img src="img/img-11.jpg" alt="Image 11"></li>
+				<li class="card mix lieu-geneve check1 radio3 lausanne"><img src="img/img-12.jpg" alt="Image 12"></li>
 				<li class="gap"></li>
 				<li class="gap"></li>
 				<li class="gap"></li>
@@ -180,10 +209,15 @@
 			<a href="#0" class="cd-close">Close</a>
 		</div> 
 
-		<a href="#0" class="cd-filter-trigger">Filtrer</a>
+		<a href="#0" class="cd-filter-trigger desktop-hidden">Filtrer</a>
 	</main> <!-- cd-main-content -->
 <script src="js/jquery-2.1.1.js"></script>
-<script src="js/jquery.mixitup.min.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<!-- <script src="js/jquery.mixitup.min.js"></script> -->
+<!-- <script src="js/main.js"></script> Resource jQuery -->
+
+<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+<script src="https://cdn.rawgit.com/kybarg/mdl-selectfield/mdl-menu-implementation/mdl-selectfield.min.js"></script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
